feat(reservation): secretary part, managing actions
